--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://kit.fontawesome.com/40d0367ab6.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <link rel="SHORTCUT ICON" href="/img/EJ-logo.ico" />
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link href="https://fonts.googleapis.com/css?family=Garamond&display=swap" rel="stylesheet">
+    <link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
 </head>
 
 <body>
@@ -227,13 +230,12 @@
 
         <!-- Modal -->
 
-        <div class="fixed z-10 overflow-y-auto top-0 w-full left-0 hidden" id="foudre">
-            <div class="flex items-center justify-center min-height-100vh pt-4 px-4 pb-20 text-center sm:block sm:p-0">
+        <div class="fixed max-h-screen top-0 w-full left-0 hidden overflow-auto" id="foudre">
+            <div class="flex items-center justify-center pt-4 px-4 pb-20 text-center sm:block sm:p-0">
                 <div class="transition-opacity">
-                    <div class="absolute inset-0 bg-gray-800 opacity-75" />
+                    <div class="fixed inset-0 bg-gray-800 opacity-75" />
                 </div>
-                <span class="hidden sm:inline-block sm:align-middle sm:h-screen">&#8203;</span>
-                <div class="inline-block align-center bg-white rounded-lg text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full"
+                <div class="max-h-screen overflow-y-auto relative inline-block align-center bg-white rounded-lg text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full"
                     role="dialog" aria-modal="true" aria-labelledby="modal-headline">
                     <div class="bg-white px-4 pt-5 pb-4 sm:p-6 sm:pb-4">
                         <div class="flex flex-wrap justify-center my-5 px-3">
@@ -246,7 +248,7 @@
                         </div>
                         <h4 class="font-thin text-2xl text-center m-5">Il faut bien que la foudre tombe quelque part
                         </h4>
-                        <p class="w-full rounded-lg mt-2 mb-3 text-gray-600 font-thin list-disc leading-relaxed">
+                        <p class="text-justify w-full rounded-lg mt-2 mb-3 text-gray-600 font-thin">
                             Un prédateur rode dans les onzième et vingtième arrondissements de Paris.
                             Blum ancien commissaire de police, aujourd’hui journaliste et auteur de romans policiers, se
                             trouve mêlé à l'enquête de la Brigade criminelle.
@@ -261,26 +263,26 @@
                             rencontres.
                         </p>
                     </div>
-                    <div class="text-right">
+                    <div class="text-right mb-5">
                         <button type="button"
                             class="my-2 py-2 px-4 bg-gray-400 text-white rounded hover:bg-gray-600 mr-5 mb-5"
                             onclick="toggleFoudre()">Fermer
                         </button>
-                        <a href="https://www.amazon.fr/faut-bien-foudre-tombe-quelque/dp/1520792522/ref=d_pd_sim_sccl_2_2/261-5510309-5836200?pd_rd_w=TAzS3&content-id=amzn1.sym.2b08e982-2261-4c85-bdb5-3dfd1bca1bd8&pf_rd_p=2b08e982-2261-4c85-bdb5-3dfd1bca1bd8&pf_rd_r=F1Y3PXJXK5Y35WPTGXZV&pd_rd_wg=NIBCL&pd_rd_r=c1cb73a0-08ca-4dfd-8c47-b1e9142bf88c&pd_rd_i=1520792522&psc=1" target="_blank"><button type="button"
-                        class="my-2 py-2 px-4 bg-amber-400 text-white rounded hover:bg-amber-600 mr-10 mb-5">Acheter</a>
+                        <a href="https://www.amazon.fr/faut-bien-foudre-tombe-quelque/dp/1520792522/ref=d_pd_sim_sccl_2_2/261-5510309-5836200?pd_rd_w=TAzS3&content-id=amzn1.sym.2b08e982-2261-4c85-bdb5-3dfd1bca1bd8&pf_rd_p=2b08e982-2261-4c85-bdb5-3dfd1bca1bd8&pf_rd_r=F1Y3PXJXK5Y35WPTGXZV&pd_rd_wg=NIBCL&pd_rd_r=c1cb73a0-08ca-4dfd-8c47-b1e9142bf88c&pd_rd_i=1520792522&psc=1"
+                            target="_blank"><button type="button"
+                                class="my-2 py-2 px-4 bg-amber-400 text-white rounded hover:bg-amber-600 mr-10 mb-5">Acheter</a>
                         </button>
                     </div>
                 </div>
             </div>
         </div>
         </div>
-        <div class="fixed z-10 overflow-y-auto top-0 w-full left-0 hidden" id="sale">
-            <div class="flex items-center justify-center min-height-100vh pt-4 px-4 pb-20 text-center sm:block sm:p-0">
+        <div class="fixed max-h-screen top-0 w-full left-0 hidden overflow-auto" id="sale">
+            <div class="flex items-center justify-center pt-4 px-4 pb-20 text-center sm:block sm:p-0">
                 <div class="transition-opacity">
-                    <div class="absolute inset-0 bg-gray-800 opacity-75" />
+                    <div class="fixed inset-0 bg-gray-800 opacity-75" />
                 </div>
-                <span class="hidden sm:inline-block sm:align-middle sm:h-screen">&#8203;</span>
-                <div class="inline-block align-center bg-white rounded-lg text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full"
+                <div class="box-border max-h-screen overflow-y-auto relative inline-block align-center bg-white rounded-lg text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full"
                     role="dialog" aria-modal="true" aria-labelledby="modal-headline">
                     <div class="bg-white px-4 pt-5 pb-4 sm:p-6 sm:pb-4">
                         <div class="flex flex-wrap justify-center my-5 px-3">
@@ -293,7 +295,7 @@
                         </div>
                         <h4 class="font-thin text-2xl text-center m-5">Sale temps pour les concierges
                         </h4>
-                        <p class="w-full rounded-lg mt-2 mb-3 text-gray-600 font-thin list-disc leading-relaxed">
+                        <p class="text-justify w-full rounded-lg mt-2 mb-3 text-gray-600 font-thin list-disc leading-relaxed">
                             Blum, ancien commissaire devenu écrivain détective, semble s’être assagi. Heureux en ménage,
                             il partage son temps entre son nouveau roman et son bébé tout neuf. Et lorsqu’il tombe par
                             hasard sur l’un de ses anciens indics, il se réjouit de l’aubaine : l’inspiration tombée du
@@ -302,26 +304,26 @@
                             cadavres.
                         </p>
                     </div>
-                    <div class="text-right">
+                    <div class="text-right mb-5">
                         <button type="button"
                             class="my-2 py-2 px-4 bg-gray-400 text-white rounded hover:bg-gray-600 mr-5 mb-5"
                             onclick="toggleSale()">Fermer
                         </button>
-                        <a href="https://www.amazon.fr/Sale-temps-concierges-Evelyne-Judrin/dp/1980523584/ref=pd_bxgy_img_sccl_1/261-5510309-5836200?pd_rd_w=bWzF7&content-id=amzn1.sym.94e2eb88-804b-4c04-a956-bea13d4e30f5&pf_rd_p=94e2eb88-804b-4c04-a956-bea13d4e30f5&pf_rd_r=W0HPJN174X9S7K9PFNVQ&pd_rd_wg=vLQ9S&pd_rd_r=c8b8753d-4256-4b55-9687-2e3173160e21&pd_rd_i=1980523584&psc=1" target="_blank"><button type="button"
-                        class="my-2 py-2 px-4 bg-amber-400 text-white rounded hover:bg-amber-600 mr-10 mb-5">Acheter</a>
+                        <a href="https://www.amazon.fr/Sale-temps-concierges-Evelyne-Judrin/dp/1980523584/ref=pd_bxgy_img_sccl_1/261-5510309-5836200?pd_rd_w=bWzF7&content-id=amzn1.sym.94e2eb88-804b-4c04-a956-bea13d4e30f5&pf_rd_p=94e2eb88-804b-4c04-a956-bea13d4e30f5&pf_rd_r=W0HPJN174X9S7K9PFNVQ&pd_rd_wg=vLQ9S&pd_rd_r=c8b8753d-4256-4b55-9687-2e3173160e21&pd_rd_i=1980523584&psc=1"
+                            target="_blank"><button type="button"
+                                class="my-2 py-2 px-4 bg-amber-400 text-white rounded hover:bg-amber-600 mr-10 mb-5">Acheter</a>
                         </button>
                     </div>
                 </div>
             </div>
         </div>
         </div>
-        <div class="fixed z-10 overflow-y-auto top-0 w-full left-0 hidden" id="crimes">
-            <div class="flex items-center justify-center min-height-100vh pt-4 px-4 pb-20 text-center sm:block sm:p-0">
+        <div class="fixed max-h-screen top-0 w-full left-0 hidden overflow-auto" id="crimes">
+            <div class="flex items-center justify-center pt-4 px-4 pb-20 text-center sm:block sm:p-0">
                 <div class="transition-opacity">
-                    <div class="absolute inset-0 bg-gray-800 opacity-75" />
+                    <div class="fixed inset-0 bg-gray-800 opacity-75" />
                 </div>
-                <span class="hidden sm:inline-block sm:align-middle sm:h-screen">&#8203;</span>
-                <div class="inline-block align-center bg-white rounded-lg text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full"
+                <div class="max-h-screen overflow-y-auto relative inline-block align-center bg-white rounded-lg text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full"
                     role="dialog" aria-modal="true" aria-labelledby="modal-headline">
                     <div class="bg-white px-4 pt-5 pb-4 sm:p-6 sm:pb-4">
                         <div class="flex flex-wrap justify-center my-5 px-3">
@@ -334,7 +336,7 @@
                         </div>
                         <h4 class="font-thin text-2xl text-center m-5">Crime et faux-semblants
                         </h4>
-                        <p class="w-full rounded-lg mt-2 mb-3 text-gray-600 font-thin list-disc leading-relaxed">
+                        <p class="text-justify w-full rounded-lg mt-2 mb-3 text-gray-600 font-thin list-disc leading-relaxed">
                             L’ex commissaire Blum, devenu auteur de romans policiers à succès et père au foyer, ne peut
                             pas refuser de rendre service au commissaire divisionnaire Lejouan dont la mère est accusée
                             du meurtre d’un marchand ambulant. Mais lorsque deux autres forains sont à leur tour
@@ -347,13 +349,14 @@
                             compagnie de son fils Henri, petit malin surdoué et questionneur inlassable ?
                         </p>
                     </div>
-                    <div class="text-right">
+                    <div class="text-right mb-5">
                         <button type="button"
                             class="my-2 py-2 px-4 bg-gray-400 text-white rounded hover:bg-gray-600 mr-5 mb-5"
                             onclick="toggleCrimes()">Fermer
                         </button>
-                        <a href="https://www.amazon.fr/Crimes-faux-semblants-Evelyne-Judrin/dp/170663353X/ref=pd_bxgy_img_sccl_2/261-5510309-5836200?pd_rd_w=o0w7P&content-id=amzn1.sym.94e2eb88-804b-4c04-a956-bea13d4e30f5&pf_rd_p=94e2eb88-804b-4c04-a956-bea13d4e30f5&pf_rd_r=F1Y3PXJXK5Y35WPTGXZV&pd_rd_wg=NIBCL&pd_rd_r=c1cb73a0-08ca-4dfd-8c47-b1e9142bf88c&pd_rd_i=170663353X&psc=1" target="_blank"><button type="button"
-                        class="my-2 py-2 px-4 bg-amber-400 text-white rounded hover:bg-amber-600 mr-10 mb-5">Acheter</a>
+                        <a href="https://www.amazon.fr/Crimes-faux-semblants-Evelyne-Judrin/dp/170663353X/ref=pd_bxgy_img_sccl_2/261-5510309-5836200?pd_rd_w=o0w7P&content-id=amzn1.sym.94e2eb88-804b-4c04-a956-bea13d4e30f5&pf_rd_p=94e2eb88-804b-4c04-a956-bea13d4e30f5&pf_rd_r=F1Y3PXJXK5Y35WPTGXZV&pd_rd_wg=NIBCL&pd_rd_r=c1cb73a0-08ca-4dfd-8c47-b1e9142bf88c&pd_rd_i=170663353X&psc=1"
+                            target="_blank"><button type="button"
+                                class="my-2 py-2 px-4 bg-amber-400 text-white rounded hover:bg-amber-600 mr-10 mb-5">Acheter</a>
                         </button>
                     </div>
                 </div>
@@ -361,13 +364,13 @@
         </div>
         </div>
 
-        <div class="fixed z-10 overflow-y-auto top-0 w-full left-0 hidden" id="tango">
+        <div class="fixed max-h-screen top-0 w-full left-0 hidden overflow-auto" id="tango">
             <div class="flex items-center justify-center min-height-100vh pt-4 px-4 pb-20 text-center sm:block sm:p-0">
                 <div class="transition-opacity">
-                    <div class="absolute inset-0 bg-gray-800 opacity-75" />
+                    <div class="fixed inset-0 bg-gray-800 opacity-75" />
                 </div>
                 <span class="hidden sm:inline-block sm:align-middle sm:h-screen">&#8203;</span>
-                <div class="inline-block align-center bg-white rounded-lg text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full"
+                <div class="max-h-screen overflow-y-auto relative inline-block align-center bg-white rounded-lg text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full"
                     role="dialog" aria-modal="true" aria-labelledby="modal-headline">
                     <div class="bg-white px-4 pt-5 pb-4 sm:p-6 sm:pb-4">
                         <div class="flex flex-wrap justify-center my-5 px-3">
@@ -380,7 +383,7 @@
                         </div>
                         <h4 class="font-thin text-2xl text-center m-5">Un tango à Belleville
                         </h4>
-                        <p class="w-full rounded-lg mt-2 mb-3 text-gray-600 font-thin list-disc leading-relaxed">
+                        <p class="text-justifyw-full rounded-lg mt-2 mb-3 text-gray-600 font-thin list-disc leading-relaxed">
                             Éric Lalonde, obscur dentiste du boulevard de Belleville, est assassiné. Sa mort a-t-elle un
                             lien avec les crimes odieux dont il s’est rendu coupable vingt ans plus tôt et dont il n’a
                             jamais eu à rendre compte devant la justice ?
@@ -400,7 +403,7 @@
                             personnage.
                         </p>
                     </div>
-                    <div class="text-right">
+                    <div class="text-right mb-5">
                         <button type="button"
                             class="my-2 py-2 px-4 bg-gray-400 text-white rounded hover:bg-gray-600 mr-5 mb-5"
                             onclick="toggleTango()">Fermer
