--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
+    <link rel="stylesheet" href="https://sibforms.com/forms/end-form/build/sib-styles.css">
 </head>
 
 <body>
@@ -295,7 +296,8 @@
                         </div>
                         <h4 class="font-thin text-2xl text-center m-5">Sale temps pour les concierges
                         </h4>
-                        <p class="text-justify w-full rounded-lg mt-2 mb-3 text-gray-600 font-thin list-disc leading-relaxed">
+                        <p
+                            class="text-justify w-full rounded-lg mt-2 mb-3 text-gray-600 font-thin list-disc leading-relaxed">
                             Blum, ancien commissaire devenu écrivain détective, semble s’être assagi. Heureux en ménage,
                             il partage son temps entre son nouveau roman et son bébé tout neuf. Et lorsqu’il tombe par
                             hasard sur l’un de ses anciens indics, il se réjouit de l’aubaine : l’inspiration tombée du
@@ -336,7 +338,8 @@
                         </div>
                         <h4 class="font-thin text-2xl text-center m-5">Crime et faux-semblants
                         </h4>
-                        <p class="text-justify w-full rounded-lg mt-2 mb-3 text-gray-600 font-thin list-disc leading-relaxed">
+                        <p
+                            class="text-justify w-full rounded-lg mt-2 mb-3 text-gray-600 font-thin list-disc leading-relaxed">
                             L’ex commissaire Blum, devenu auteur de romans policiers à succès et père au foyer, ne peut
                             pas refuser de rendre service au commissaire divisionnaire Lejouan dont la mère est accusée
                             du meurtre d’un marchand ambulant. Mais lorsque deux autres forains sont à leur tour
@@ -383,7 +386,8 @@
                         </div>
                         <h4 class="font-thin text-2xl text-center m-5">Un tango à Belleville
                         </h4>
-                        <p class="text-justifyw-full rounded-lg mt-2 mb-3 text-gray-600 font-thin list-disc leading-relaxed">
+                        <p
+                            class="text-justifyw-full rounded-lg mt-2 mb-3 text-gray-600 font-thin list-disc leading-relaxed">
                             Éric Lalonde, obscur dentiste du boulevard de Belleville, est assassiné. Sa mort a-t-elle un
                             lien avec les crimes odieux dont il s’est rendu coupable vingt ans plus tôt et dont il n’a
                             jamais eu à rendre compte devant la justice ?
@@ -423,10 +427,10 @@
         <div>
             <h2 class="text-center text-gray-600 font-thin text-4xl py-20">CONTACT</h2>
         </div>
-        <div class="text-center font-thin text-2xl text-orange-400">
-            <p>ejudrin@gmail.com</p>
+        <div class="text-center font-thin text-orange-400 p-5">
+            <p class="text-3xl">ejudrin@gmail.com</p>
         </div>
-        <div class="flex justify-center py-10">
+        <div class="flex justify-center">
             <div class="px-5" style="color: #D92D70;">
                 <a href="https://www.instagram.com/evelyne_judrin_auteure/?hl=fr" target="_blank">
                     <i class="fab fa-instagram fa-3x"></i>
@@ -438,14 +442,16 @@
                 </a>
             </div>
         </div>
-        <div class="text-right pb-10 pr-10">
-            <button class="btntop" onclick="topFunction()" id="myBtn" title="Go to top"><svg
-                    xmlns="http://www.w3.org/2000/svg" class="animate-bounce h-10 w-10 text-zinc-600" fill="none"
-                    viewBox="0 0 24 24" stroke="currentColor">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                        d="M5 11l7-7 7 7M5 19l7-7 7 7" />
-                </svg></button>
-        </div>
+        <iframe width="540" height="1000" src="https://71a0a68f.sibforms.com/serve/MUIFAAb5MkLycQ_oy_FG3SfnUltkaOVTuuipH-v-UqmP482GknbTI-h5JqW4YzNWsbEiofJYs3PXWxzJnMJx_g2dW6rQGvcth2l89XKrRW5tWXW_ojaf9Sca7xppiDu4bu3KVqDXDwu0Z9U2fR26eRZx5-z0V9TWjFpQKXGkmo6Sh0r0LPrE9SDjHyOAZlmXFIIZoC8WZlSmbQb5" frameborder="0" scrolling="auto" allowfullscreen style="display: block;margin-left: auto;margin-right: auto;max-width: 100%;"></iframe>
+    </div>
+    </div>
+    <div class="text-right pb-10 pr-10">
+        <button class="btntop" onclick="topFunction()" id="myBtn" title="Go to top"><svg
+                xmlns="http://www.w3.org/2000/svg" class="animate-bounce h-10 w-10 text-zinc-600" fill="none"
+                viewBox="0 0 24 24" stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 11l7-7 7 7M5 19l7-7 7 7" />
+            </svg></button>
+    </div>
     </div>
     <footer class="bg-gray-600 font-thin text-center text-white p-3">&copy;Evelyne Judrin. Tous droits réservés</footer>
     <script src="javascript.js"></script>
